--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="images/logo.png" class="logo" alt="logo">
             <ul>
                 <li><a href="#">Market</a></li>
                 <li><a href="#">Features</a></li>
